--- a/design.css
+++ b/design.css
@@ -1,36 +1,54 @@
 
 
 body {
-
+  background-image: -moz-element();
 background: #ccc;
 background-image:  url(lulea.jpg); background-repeat: no-repeat; background-size: cover; 
 background-attachment: fixed;
 background-position: center;
+background-repeat: no-repeat; background-image: -moz-element();background-size: cover;
 
 height: 180vw; 
+
+
 }
 header{
   float: center;
-  margin-top: -6.3vw;
+  margin-top: -7.3vw;
 background: linear-gradient( rgb(0, 0, 0), rgb(168, 168, 168));
 
 margin-left: -6vw;
 width: 120vw;
 height:20vw ;
 
+
 }
 
 
 h1{
   padding-top: 5vw;
-  text-align: center;
+  text-align: left;
   font-size: 10vw;
   text-shadow: 1px 3px red;
   color: rgb(243, 142, 142);
- margin-left:-10vw;
+ margin-left:1vw;
+ font-family: Arial, Helvetica, sans-serif;
+ 
+    position: relative;
+    -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
+    animation: mymove 5s infinite;
 
 }
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes mymove {
+  from {left: 0px;}
+  to {left: 80px;}
+}
 
+@keyframes mymove {
+  from {left: 0px;}
+  to {left: 80px;}
+}
 
 #canvas{
 
@@ -53,15 +71,16 @@ color: black;
 #test {
 
   position: absolute;
-  top: 40vw;
-  right: 5;
+  top: 45vw;
+  right: 1;
   z-index: 900;
-  color: rgb(255, 255, 255);
-  text-decoration-color: beige;
+  color: rgb(231, 221, 218);
+  text-decoration-color: rgb(226, 3, 33);
   box-shadow: rgb(255, 255, 255) 0 0 10ch;
-  font-size: 4vw;
+  font-size: 5vw;
   text-align: center;
-  text-transform: uppercase;
+  text-decoration-color: aqua;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, cursive, sans-serif;
   font-weight: bold;
 
 }
@@ -69,9 +88,9 @@ color: black;
 iframe{
 
   position: absolute;
-  top:0vw;
 
-  bottom: 0vw;
+
+
 left: 0vw;
 right: 10vw;
   z-index: 900;
@@ -82,18 +101,21 @@ right: 10vw;
 .spotify{
 
   position: absolute;
-bottom: 0vw;
+top:145vw;
 left: 0vw;
 right: 0vw;;
   z-index: 900;
   border:  13px solid rgb(202, 0, 0);
-  width: 88vw;
-  height: 20vw;
+  width: 92vw;
+  height: 19vw;
   border-radius: 20px;
   box-shadow: rgb(153, 0, 0) 0 0 10ch;
 
   
 }
+
+
+
 
 
 
