--- a/design.css
+++ b/design.css
@@ -2,8 +2,13 @@
 
 body {
   background-image: -moz-element();
-background: #ccc;
-background-image:  url(lulea.jpg); background-repeat: no-repeat; background-size: cover; 
+
+background: linear-gradient(rgba(158, 153, 153, 0.664),rgba(158, 153, 153, 0.24), rgba(155, 145, 145, 0.705)), url(lulea.jpg); height: 100vw; 
+background-attachment: fixed;
+
+background-repeat: no-repeat;
+background-position: cover;
+background-size: cover;
 background-attachment: fixed;
 background-position: center;
 background-repeat: no-repeat; background-image: -moz-element();background-size: cover;
@@ -74,7 +79,7 @@ color: black;
   top: 30vw;
   right: 1;
   z-index: 900;
-  color: rgb(231, 221, 218);
+  color: rgb(0, 0, 0);
   text-decoration-color: rgb(226, 3, 33);
   box-shadow: rgb(255, 255, 255) 0 0 10ch;
   font-size: 5vw;
