--- a/design.css
+++ b/design.css
@@ -1,4 +1,6 @@
 
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
 
 body {
   background-image: -moz-element();
@@ -59,7 +61,7 @@ h1{
 
  
  width: 100%; 
- height: 200vw; background-repeat: no-repeat;
+ height: 200vw; 
 text-align: center;
 color: black;
 
@@ -94,8 +96,6 @@ iframe{
 
   position: absolute;
 
-
-
 left: 0vw;
 right: 10vw;
   z-index: 900;
@@ -119,10 +119,126 @@ right: 0vw;;
   
 }
 
+p {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 0px;
+  color: white;
+}
 
 
 
 
+body {font-family: Verdana, sans-serif; margin:0}
+
+/* Slideshow container */
+.slideshow-container {
+  position: left;
+
+background: linear-gradient(rgba(158, 153, 153, 0),rgba(158, 153, 153, 0.445),rgba(158, 153, 153, 0.507),rgba(158, 153, 153, 0.582), rgba(155, 145, 145, 0.185)), url(lulea.jpg); height: 100vw; 
+background-repeat: no-repeat;
+background-position: cover;
+background-size: cover;
+background-attachment: fixed;
+background-position: center;
+}
+
+/* Slides */
+.mySlides {
+  display: none;
+  padding: 80px;
+  text-align: center;
+  background: linear-gradient(rgba(158, 153, 153, 0),rgba(158, 153, 153, 0.445),rgba(158, 153, 153, 0.507),rgba(158, 153, 153, 0.582), rgba(155, 145, 145, 0.185)), url(lulea.jpg); height: 100vw; 
+  background-repeat: no-repeat;
+  background-position: cover;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: right;
+  top: 20%;
+  width: auto;
+  margin-top: 1px;
+  padding: 16vw;
+  color: rgb(146, 172, 255);
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  position: left;
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  color: white;
+
+  
+}
+
+/* The dot/bullet/indicator container */
+.dot-container {
+    text-align: center;
+    padding: 5vw;
+    background: rgb(255, 255, 255);
+ 
+    position: absolute;
+    top:95vw;
+    left: 0vw;
+    right: 0vw;;
+      z-index: 900;
+
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 10vw;
+  width: 10vw;
+  margin: 0 2px;
+  background-color: rgb(255, 60, 60);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  
+}
+
+/* Add a background color to the active dot/circle */
+.active, .dot:hover {
+  background-color: #000000;
+
+  
+}
+
+/* Add an italic font style to all quotes */
+q {font-style: italic;
 
 
+  position: absolute;
+top:40vw;
+left: 0vw;
+right: 0vw;;
+  z-index: 900;
+}
+
+/* Add a blue color to the author */
+.author {color: rgb(27, 107, 255);
+
+  position: absolute;
+top:80vw;
+left: 0vw;
+right: 0vw;;
+  z-index: 900;
+
+}
 
