--- a/design.css
+++ b/design.css
@@ -42,7 +42,7 @@ h1{
  font-family: Arial, Helvetica, sans-serif;
  
     position: relative;
-    -webkit-animation: mymove 10s infinite; /* Safari 4.0 - 8.0 */
+    -webkit-animation: mymove 10s infinite;
     animation: mymove 10s infinite;
 
 }
