--- a/design.css
+++ b/design.css
@@ -1,22 +1,13 @@
 
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
+
 
 body {
-  background-image: -moz-element();
 
-background: linear-gradient(rgba(158, 153, 153, 0),rgba(158, 153, 153, 0.445),rgba(158, 153, 153, 0.507),rgba(158, 153, 153, 0.582), rgba(155, 145, 145, 0.185)), url(lulea.jpg); height: 100vw; 
-background-attachment: fixed;
-
+background: linear-gradient(rgba(161, 44, 44, 0),rgba(158, 153, 153, 0.445),rgba(158, 153, 153, 0.507),rgba(158, 153, 153, 0.582), rgba(155, 145, 145, 0.185)), url(lulea.jpg);
 background-repeat: no-repeat;
-background-position: cover;
-background-size: cover;
 background-attachment: fixed;
 background-position: center;
-background-repeat: no-repeat; background-image: -moz-element();background-size: cover;
-
-height: 100vw; 
-
+background-size: cover;
 
 }
 header{
@@ -49,19 +40,19 @@ h1{
 
 @-webkit-keyframes mymove {
   from {left: 20px;}
-  to {left: 85px;}
+  to {left: 90px;}
 }
 
 @keyframes mymove {
   from {left: 20px;}
-  to {left: 85px;}
+  to {left: 90px;}
 }
 
 #canvas{
 
  
- width: 100%; 
- height: 200vw; 
+ width: 98%; 
+ height: 90vh; 
 text-align: center;
 color: black;
 
@@ -112,7 +103,7 @@ right: 0vw;;
   z-index: 900;
   
   width: 100vw;
-  height: 19vw;
+  height: 15vw;
 
  
 
@@ -130,34 +121,19 @@ margin-right:25px;
 
 
 
-body {font-family: Verdana, sans-serif; margin:0}
 
-/* Slideshow container */
-.slideshow-container {
-  position: left;
 
-background: linear-gradient(rgba(158, 153, 153, 0),rgba(158, 153, 153, 0.445),rgba(158, 153, 153, 0.507),rgba(158, 153, 153, 0.582), rgba(155, 145, 145, 0.185)), url(lulea.jpg); height: 100vw; 
-background-repeat: no-repeat;
-background-position: cover;
-background-size: cover;
-background-attachment: fixed;
-background-position: center;
-}
-
-/* Slides */
 .mySlides {
   display: none;
   padding: 80px;
   text-align: center;
-  background: linear-gradient(rgba(158, 153, 153, 0),rgba(158, 153, 153, 0.445),rgba(158, 153, 153, 0.507),rgba(158, 153, 153, 0.582), rgba(155, 145, 145, 0.185)), url(lulea.jpg); height: 100vw; 
-  background-repeat: no-repeat;
-  background-position: cover;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
+  
+
+
+
 }
 
-/* Next & previous buttons */
+
 .prev, .next {
   cursor: pointer;
   position: right;
@@ -172,14 +148,13 @@ background-position: center;
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   position: left;
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
   color: white;
@@ -187,7 +162,6 @@ background-position: center;
   
 }
 
-/* The dot/bullet/indicator container */
 .dot-container {
     text-align: center;
     padding: 5vw;
@@ -201,7 +175,6 @@ background-position: center;
 
 }
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 10vw;
@@ -210,18 +183,17 @@ background-position: center;
   background-color: rgb(255, 60, 60);
   border-radius: 50%;
   display: inline-block;
-  transition: background-color 0.6s ease;
+
   
 }
 
-/* Add a background color to the active dot/circle */
+
 .active, .dot:hover {
   background-color: #000000;
 
   
 }
 
-/* Add an italic font style to all quotes */
 q {font-style: italic;
 
 color:black;
@@ -231,10 +203,10 @@ top:35vw;
 left: 0vw;
 right: 0vw;
   z-index: 900;
-bottom: 5vw;
+  box-sizing: border-box;
+
 }
 
-/* Add a blue color to the author */
 .author {color: rgb(255, 255, 255);
 
   position: absolute;
