--- a/design.css
+++ b/design.css
@@ -51,8 +51,8 @@ h1{
 #canvas{
 
  
- width: 98%; 
- height: 90vh; 
+ width: 100%; 
+ height: 100vh; 
 text-align: center;
 color: black;
 
@@ -210,7 +210,7 @@ right: 0vw;
 .author {color: rgb(255, 255, 255);
 
   position: absolute;
-top:70vw;
+top:80vw;
 left: 17vw;
 right: 16vw;;
   z-index: 900;
@@ -229,7 +229,7 @@ top:35vw;
 left: 0vw;
 right: 3vw;;
   z-index: 900;
-  font-size: 6.4vw;
+  font-size: 6vw;
   font-style: italic;
   box-shadow: rgb(0, 0, 0) 0 0 10ch;
 border-radius: 3ch; width: 32ch; height: 10ch;
@@ -278,12 +278,12 @@ border-radius: 3ch; width: 30ch; height: 5ch;
 .author3 {color: rgb(0, 0, 0);
 
   position: absolute;
-top:30vw;
+top:40vw;
 left: 17vw;
 right: 16vw;;
   z-index: 900;
-  font-size: 6vw;
-  font-family: "Lobster", serif;
+  font-size: 5vw;
+  font-style: italic;
   box-shadow: rgb(153, 0, 0) 0 0 10ch;
 border-radius: 50vw;
 
