--- a/design.css
+++ b/design.css
@@ -2,6 +2,8 @@
 *{
 margin: 7;
 padding: 0;
+
+
 }
 
 body {
@@ -18,22 +20,17 @@ body {
  
   
   
-  h1{
-    color: rgb(65, 0, 0);
-margin-top:-9;
-    font-size: 10vw;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-style: italic;
-    font-weight: bold;
-  }
+
 
   #klocka{
     font-family: Arial, Helvetica, sans-serif, cursive;
-   float: left;
-    margin: 19px;
-    text-shadow: 1px 3px rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+   float: center;
+margin-top:18px;
+margin-right: 18px;
+    text-shadow: 1px 3px rgb(150, 0, 0);
+    color: rgb(93, 190, 255);
     font-size: 6vw;
+    z-index: 900;
 
   }
   
@@ -59,7 +56,7 @@ margin-top:-9;
   
   .test {
     color: rgb(184, 0, 0);
-    margin-top:-9;
+    margin-top:-720px;
         font-size: 10vw;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         font-style: italic;
@@ -78,13 +75,13 @@ margin-top:-9;
   }
   
   @-webkit-keyframes mymove {
-    from {left: 5px;}
-    to {left: 60px;}
+    from {left: 10px;}
+    to {left: 40px;}
   }
   
   @keyframes mymove {
-    from {left: 5px;}
-    to {left: 60px;}
+    from {left: 15px;}
+    to {left: 45px;}
   }
   
   iframe{
@@ -101,15 +98,15 @@ margin-top:-9;
   .spotify{
   
     position: absolute;
-  top:140vw;
+  top:143vw;
   left: 0vw;
   right: 0vw;;
     z-index: 900;
     
     width: 100vw;
-    height: 20vw;
+    height: 50vw;
   
-   
+    background-image: linear-gradient(rgba(211, 189, 189, 0),rgba(0, 0, 0, 0.445),rgba(255, 255, 255, 0.507),rgba(158, 153, 153, 0.582), rgba(0, 0, 0, 0.712));
   
     
   }
@@ -234,11 +231,11 @@ margin-top:-9;
   .text{
     position: absolute;
     color: rgb(255, 255, 255);
-  top:40vw;
-  left: 0vw;
-  right: 1vw;
+  top:44vw;
+  left: -6vw;
 
-    font-size: 6vw;
+
+    font-size: 7vw;
     width: 10%;
     font-style: italic;
    
@@ -249,11 +246,11 @@ margin-top:-9;
   .text2{
     position: absolute;
     color: rgb(0, 0, 0);
-  top:40vw;
-  left: 5vw;
-  right: 1vw;;
+  top:44vw;
+  
+left:0px;
     z-index: 900;
-    font-size: 6vw;
+    font-size: 7vw;
     font-style: italic;
   
   border-radius: 3ch; width: 30ch; height: 5ch;
@@ -307,6 +304,8 @@ margin-top:-9;
     text-align:center;
     }
   #heart img{
+    
+    width: 110px;
     position:absolute;
     left:0;
     right:0;
