--- a/design.css
+++ b/design.css
@@ -1,6 +1,6 @@
 
 *{
-margin: 7;
+margin: 0;
 padding: 0;
 
 
@@ -37,7 +37,7 @@ margin-right: 18px;
   #canvas{
   
     background-size: cover;
-   width: 120vw; 
+   width: 180vw; 
    height: 200vw; 
   text-align: center;
   color: black;
@@ -64,7 +64,7 @@ margin-right: 18px;
     padding-top: 0vw;
     text-align: left;
     font-size: 10vw;
-  
+
    margin-left:1vw;
    font-family: Arial, Helvetica, sans-serif;
    
@@ -128,7 +128,7 @@ margin-right: 18px;
     display: none;
     padding: 80px;
     text-align: center;
-    
+    width: 100px;
   
   
   
@@ -174,6 +174,7 @@ margin-right: 18px;
       right: 0vw;;
         z-index: 900;
         height: 20px;;
+        width: 100vw;
         background-image: linear-gradient(rgba(211, 189, 189, 0),rgba(0, 0, 0, 0.445),rgba(255, 255, 255, 0.507),rgba(158, 153, 153, 0.582), rgba(0, 0, 0, 0.712));
   
   }
@@ -208,18 +209,18 @@ margin-right: 18px;
   right: 0vw;
     z-index: 900;
     box-sizing: border-box;
-  
+  width: 10vw;
   }
   
   .author {color: rgb(255, 255, 255);
   
     float: left;
-  top:80vw;
+  top:82vw;
   left: 17vw;
   right: 16vw;;
     z-index: 900;
     font-size: 8vw;
-    width: 10vw;
+    width: 20vw;
     text-align: center;
     font-family: "Lobster", serif;
     box-shadow: rgb(153, 0, 0) 0 0 10ch;
@@ -235,8 +236,8 @@ margin-right: 18px;
 left: -19px;
 
 
-    font-size: 7vw;
-    width: 10%;
+    font-size: 6vw;
+    width: 20%;
     font-style: italic;
    
   border-radius: 3ch; width: 32ch; height: 10ch;
@@ -250,7 +251,7 @@ left: -19px;
   
 left:-9px;
     z-index: 900;
-    font-size: 7vw;
+    font-size: 6vw;
     font-style: italic;
   
   border-radius: 3ch; width: 30ch; height: 5ch;
@@ -283,7 +284,7 @@ left:-9px;
   .author3 {color: rgb(255, 255, 255);
   
     position: absolute;
-  top:37vw;
+  top:45vw;
   left: 0vw;
   right: 1vw;;
     z-index: 900;
